# se-toolkit-lab-7

./: README.md  docker-compose.yml
bot/: Dockerfile  PLAN.md  README.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  commands.py
bot/services/: __init__.py  intent_router.py  llm_client.py  lms_api.py
