[project]
name = "lms-telegram-bot"
version = "0.1.0"
description = "Telegram bot for LMS interaction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "aiogram>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
